# Eightser

./: .gitmodules  CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: Linux.yml  Windows.yml  macOS.yml
include/Eightser/: ArchiveBase.hpp  ArchiveTraits.hpp  Common.hpp  Compress.hpp  Config.hpp  Core.hpp  DataTrack.hpp  Hash.hpp  HierarchyTrack.hpp  IArchive.hpp  Instantiable.hpp  InstantiableRegistry.hpp  InstantiableTraits.hpp  Memory.hpp  OArchive.hpp  PolymorphicArchive.hpp  Serializable.hpp  StreamWrapper.hpp
include/Eightser/BuiltIn/: Aggregate.hpp  Alias.hpp  ApplyFunctor.hpp  Binary.hpp  BitPack.hpp  Common.hpp  Compress.hpp  DataTrack.hpp  HierarchyTrack.hpp  Span.hpp  Union.hpp  any.hpp
include/Eightser/BuiltIn/Detail/: Macro.hpp
include/Eightser/Core/: ArchiveBase.hpp  Config.hpp  Hash.hpp  Memory.hpp  PolymorphicArchive.hpp  Serialization.hpp
include/Eightser/Detail/: Macro.hpp  MacroUndef.hpp  Meta.hpp
include/Eightser/Dynamic/: AnyRegistry.hpp  Instantiable.hpp  InstantiableRegistry.hpp
include/Eightser/Standard/: AnyRegistry.hpp  any.hpp  array.hpp  atomic.hpp  bitset.hpp  complex.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  optional.hpp  pair.hpp  priority_queue.hpp  queue.hpp  set.hpp  shared_ptr.hpp  stack.hpp  string.hpp  tuple.hpp  unique_ptr.hpp  valarray.hpp  variant.hpp  vector.hpp  weak_ptr.hpp
include/Eightser/Standard/Detail/: Meta.hpp
include/Eightser/Utility/: Alias.hpp
src/Eightser/: Core.cpp  InstantiableRegistry.cpp  StreamWrapper.cpp
src/Eightser/BuildIn/: any.cpp
src/Eightser/Dynamic/: AnyRegistry.cpp
src/Eightser/Standard/: AnyRegistry.cpp  any.cpp  vector.cpp
test/: EightserTestingBase.hpp  TestAggregate.cpp  TestAlias.cpp  TestAny.cpp  TestArray.cpp  TestAtomic.cpp  TestBitPack.cpp  TestBitset.cpp  TestComplex.cpp  TestDeque.cpp  TestDynamicArray.cpp  TestExample.cpp  TestForwardList.cpp  TestLibrary.cpp  TestList.cpp  TestMap.cpp  TestMemory.cpp  TestOptional.cpp  TestPair.cpp  TestPolymorphic.cpp  TestPriorityQueue.cpp  TestQueue.cpp  TestSet.cpp  TestStack.cpp  TestString.cpp  TestTracking.cpp  TestTuple.cpp  TestUnion.cpp  TestUserType.cpp  TestValarray.cpp  TestVariant.cpp  TestVector.cpp
test/TestLibrary/: BaseObject.cpp  BaseObject.hpp  DerivedObject.cpp  DerivedObject.hpp
